--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -23,7 +23,9 @@
 	    <p th:if="${param.user} != null" th:text="${param.user[0]}">user</p>
 	     
 	    <a class="btn btn-default" th:href="@{/admin.html}" th:utext="#{label.pages.admin}">admin</a>
-		<br /> <br />
+		<br />
+        <a sec:authorize="hasAuthority('MANAGE_PRIVILEGE')" class="btn btn-default" th:href="@{/management}" th:utext="#{label.pages.management.title}">manager</a>
+        <br />
 	    <a th:href="@{/loggedUsers}" th:utext="#{label.pages.users.message}">View logged in users</a>
 		<br />	    
 	    <a th:href="@{/loggedUsersFromSessionRegistry}" th:utext="#{label.pages.users.sessionregistry.message}">View logged in users</a>
